start vertical fill behavior

--- a/index.html
+++ b/index.html
@@ -10,29 +10,50 @@
 		<div id="name">
 			<div>CARO</div><div id="line">
 				<div class="letter-container" id="container-l">
-					<div class="segment" id="segment1"></div>
-					<div class="segment" id="segment6"></div>
+					<div class="segment" id="segment1"><div class="fill"></div></div>
+					<div class="segment" id="segment6"><div class="fill"></div></div>
 				</div>
 				<div class="letter-container" id="container-i">
-					<div class="segment" id="segment2"></div>
-					<div class="segment" id="segment7"></div>
+					<div class="segment" id="segment2"><div class="fill"></div></div>
+					<div class="segment" id="segment7"><div class="fill"></div></div>
 					<div class="segment" id="segment13"></div>
 				</div>
 				<div class="letter-container" id="container-n">
-					<div class="segment" id="segment3"></div>
-					<div class="segment" id="segment4"></div>
-					<div class="segment" id="segment8"></div>
-					<div class="segment" id="segment9"></div>
-					<div class="segment" id="segment10"></div>
+					<div class="segment" id="segment3"><div class="fill"></div></div>
+					<div class="segment" id="segment4"><div class="fill"></div></div>
+					<div class="segment" id="segment8"><div class="fill"></div></div>
+					<div class="segment" id="segment9"><div class="fill"></div></div>
+					<div class="segment" id="segment10"><div class="fill"></div></div>
 				</div>
 				<div class="letter-container" id="container-e">
-					<div class="segment" id="segment5"></div>
-					<div class="segment" id="segment11"></div>
+					<div class="segment" id="segment5"><div class="fill"></div></div>
+					<div class="segment" id="segment11"><div class="fill"></div></div>
 					<div class="segment" id="segment12"></div>
 					<div class="segment" id="segment14"></div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas tellus rutrum tellus pellentesque. In dictum non consectetur a erat nam at lectus. Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Amet nulla facilisi morbi tempus iaculis urna id. Porttitor leo a diam sollicitudin tempor. Proin nibh nisl condimentum id venenatis a condimentum. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. At tellus at urna condimentum mattis pellentesque id nibh. In ornare quam viverra orci sagittis eu volutpat odio facilisis. Feugiat in fermentum posuere urna. Neque ornare aenean euismod elementum nisi. Neque volutpat ac tincidunt vitae semper quis lectus nulla at. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Facilisi cras fermentum odio eu. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Consectetur adipiscing elit ut aliquam purus sit amet.</p>
+
+	<p>Facilisis leo vel fringilla est ullamcorper eget nulla. Ut lectus arcu bibendum at varius vel pharetra vel turpis. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Blandit cursus risus at ultrices mi. Pulvinar neque laoreet suspendisse interdum. Risus feugiat in ante metus dictum at tempor. Enim nec dui nunc mattis enim. A cras semper auctor neque. Sed euismod nisi porta lorem mollis aliquam ut porttitor leo. Eleifend quam adipiscing vitae proin. Viverra nibh cras pulvinar mattis. A iaculis at erat pellentesque adipiscing commodo. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Et malesuada fames ac turpis egestas integer eget. Felis donec et odio pellentesque. Etiam tempor orci eu lobortis elementum nibh tellus molestie. Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Sapien eget mi proin sed.</p>
+
+	<p>Enim facilisis gravida neque convallis a cras semper auctor. Feugiat nibh sed pulvinar proin gravida hendrerit lectus a. Ut etiam sit amet nisl purus in. Congue nisi vitae suscipit tellus mauris. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Diam vulputate ut pharetra sit amet aliquam id. Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. Cursus turpis massa tincidunt dui ut. Euismod in pellentesque massa placerat. Malesuada bibendum arcu vitae elementum curabitur vitae. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Ullamcorper sit amet risus nullam eget felis. Enim diam vulputate ut pharetra sit amet aliquam. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Et molestie ac feugiat sed lectus vestibulum mattis. Mauris a diam maecenas sed. Amet commodo nulla facilisi nullam vehicula ipsum a. Ornare arcu dui vivamus arcu.</p>
+
+	<p>Nunc mi ipsum faucibus vitae. Dolor sit amet consectetur adipiscing. Viverra vitae congue eu consequat. Dui accumsan sit amet nulla facilisi. Quis auctor elit sed vulputate mi sit. Proin sed libero enim sed faucibus turpis in eu. Morbi leo urna molestie at elementum eu facilisis sed. Lectus nulla at volutpat diam ut venenatis tellus in metus. Urna cursus eget nunc scelerisque viverra mauris. Quisque id diam vel quam elementum pulvinar etiam non quam. Sit amet risus nullam eget felis eget nunc lobortis mattis. Ullamcorper morbi tincidunt ornare massa eget egestas purus. Ipsum dolor sit amet consectetur adipiscing elit. Id semper risus in hendrerit gravida. Curabitur vitae nunc sed velit dignissim. Ut ornare lectus sit amet est placerat in.</p>
+
+	<p>Venenatis lectus magna fringilla urna porttitor rhoncus. Dui vivamus arcu felis bibendum ut. Egestas sed sed risus pretium quam vulputate dignissim suspendisse. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Pulvinar pellentesque habitant morbi tristique senectus et netus et. Nibh tellus molestie nunc non blandit massa enim nec. Nam at lectus urna duis convallis convallis tellus id interdum. Adipiscing bibendum est ultricies integer quis auctor elit. In cursus turpis massa tincidunt dui ut. Praesent tristique magna sit amet purus gravida quis blandit turpis. Purus gravida quis blandit turpis cursus in hac habitasse. Pharetra convallis posuere morbi leo. Nunc non blandit massa enim nec dui nunc mattis enim. Non consectetur a erat nam at lectus. Volutpat odio facilisis mauris sit amet massa vitae tortor condimentum. Adipiscing elit ut aliquam purus sit amet luctus. Blandit aliquam etiam erat velit scelerisque in dictum. Scelerisque purus semper eget duis at. Vitae justo eget magna fermentum iaculis eu non diam phasellus. Nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum.</p>
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas tellus rutrum tellus pellentesque. In dictum non consectetur a erat nam at lectus. Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Amet nulla facilisi morbi tempus iaculis urna id. Porttitor leo a diam sollicitudin tempor. Proin nibh nisl condimentum id venenatis a condimentum. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. At tellus at urna condimentum mattis pellentesque id nibh. In ornare quam viverra orci sagittis eu volutpat odio facilisis. Feugiat in fermentum posuere urna. Neque ornare aenean euismod elementum nisi. Neque volutpat ac tincidunt vitae semper quis lectus nulla at. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Facilisi cras fermentum odio eu. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Consectetur adipiscing elit ut aliquam purus sit amet.</p>
+
+	<p>Facilisis leo vel fringilla est ullamcorper eget nulla. Ut lectus arcu bibendum at varius vel pharetra vel turpis. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Blandit cursus risus at ultrices mi. Pulvinar neque laoreet suspendisse interdum. Risus feugiat in ante metus dictum at tempor. Enim nec dui nunc mattis enim. A cras semper auctor neque. Sed euismod nisi porta lorem mollis aliquam ut porttitor leo. Eleifend quam adipiscing vitae proin. Viverra nibh cras pulvinar mattis. A iaculis at erat pellentesque adipiscing commodo. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Et malesuada fames ac turpis egestas integer eget. Felis donec et odio pellentesque. Etiam tempor orci eu lobortis elementum nibh tellus molestie. Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Sapien eget mi proin sed.</p>
+
+	<p>Enim facilisis gravida neque convallis a cras semper auctor. Feugiat nibh sed pulvinar proin gravida hendrerit lectus a. Ut etiam sit amet nisl purus in. Congue nisi vitae suscipit tellus mauris. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Diam vulputate ut pharetra sit amet aliquam id. Arcu cursus euismod quis viverra nibh cras pulvinar mattis nunc. Cursus turpis massa tincidunt dui ut. Euismod in pellentesque massa placerat. Malesuada bibendum arcu vitae elementum curabitur vitae. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Ullamcorper sit amet risus nullam eget felis. Enim diam vulputate ut pharetra sit amet aliquam. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Et molestie ac feugiat sed lectus vestibulum mattis. Mauris a diam maecenas sed. Amet commodo nulla facilisi nullam vehicula ipsum a. Ornare arcu dui vivamus arcu.</p>
+
+	<p>Nunc mi ipsum faucibus vitae. Dolor sit amet consectetur adipiscing. Viverra vitae congue eu consequat. Dui accumsan sit amet nulla facilisi. Quis auctor elit sed vulputate mi sit. Proin sed libero enim sed faucibus turpis in eu. Morbi leo urna molestie at elementum eu facilisis sed. Lectus nulla at volutpat diam ut venenatis tellus in metus. Urna cursus eget nunc scelerisque viverra mauris. Quisque id diam vel quam elementum pulvinar etiam non quam. Sit amet risus nullam eget felis eget nunc lobortis mattis. Ullamcorper morbi tincidunt ornare massa eget egestas purus. Ipsum dolor sit amet consectetur adipiscing elit. Id semper risus in hendrerit gravida. Curabitur vitae nunc sed velit dignissim. Ut ornare lectus sit amet est placerat in.</p>
+
+	<p>Venenatis lectus magna fringilla urna porttitor rhoncus. Dui vivamus arcu felis bibendum ut. Egestas sed sed risus pretium quam vulputate dignissim suspendisse. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Pulvinar pellentesque habitant morbi tristique senectus et netus et. Nibh tellus molestie nunc non blandit massa enim nec. Nam at lectus urna duis convallis convallis tellus id interdum. Adipiscing bibendum est ultricies integer quis auctor elit. In cursus turpis massa tincidunt dui ut. Praesent tristique magna sit amet purus gravida quis blandit turpis. Purus gravida quis blandit turpis cursus in hac habitasse. Pharetra convallis posuere morbi leo. Nunc non blandit massa enim nec dui nunc mattis enim. Non consectetur a erat nam at lectus. Volutpat odio facilisis mauris sit amet massa vitae tortor condimentum. Adipiscing elit ut aliquam purus sit amet luctus. Blandit aliquam etiam erat velit scelerisque in dictum. Scelerisque purus semper eget duis at. Vitae justo eget magna fermentum iaculis eu non diam phasellus. Nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum.</p>
+	<script   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="   crossorigin="anonymous"></script>
+	<script src="script.js"></script>
 </body>
 </html>
