--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 				<div class="letter-container" id="container-i">
 					<div class="segment" id="segment2"><div class="bottom-fill"></div></div>
 					<div class="segment" id="segment7"><div class="fill"></div></div>
-					<div class="segment" id="segment13"></div>
+					<div class="segment" id="segment13"><div class="top-fill"></div></div>
+					<div class="segment" id="segment15"><div class="top-fill"></div></div>
 				</div>
 				<div class="letter-container" id="container-n">
 					<div class="segment" id="segment3"><div class="bottom-fill"></div></div>
-	<!-- 				<div class="segment" id="segment4"><div class="bottom-fill"></div></div> -->
 					<div class="segment" id="segment8"><div class="fill"></div></div>
 					<div class="segment" id="segment9"><div class="fill"></div></div>
 					<div class="segment" id="segment10"><div class="fill"></div></div>
@@ -28,8 +28,8 @@
 				<div class="letter-container" id="container-e">
 					<div class="segment" id="segment5"><div class="bottom-fill"></div></div>
 					<div class="segment" id="segment11"><div class="fill"></div></div>
-					<div class="segment" id="segment12"></div>
-					<div class="segment" id="segment14"></div>
+					<div class="top-segment" id="segment12"><div class="top-fill"></div></div>
+					<div class="top-segment" id="segment14"><div class="top-fill"></div></div>
 				</div>
 			</div>
 		</div>
