consolidate similar if statements

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 		<div id="name">
 			<div>CARO</div><div id="line">
 				<div class="letter-container" id="container-l">
-					<div class="segment" id="segment1"><div class="bottom-fill"></div></div>
+					<div class="segment bottom-segment" id="segment1"><div class="bottom-fill"></div></div>
 					<div class="segment" id="segment6"><div class="fill"></div></div>
 				</div>
 				<div class="letter-container" id="container-i">
-					<div class="segment" id="segment2"><div class="bottom-fill"></div></div>
+					<div class="segment bottom-segment" id="segment2"><div class="bottom-fill"></div></div>
 					<div class="segment" id="segment7"><div class="fill"></div></div>
 					<div class="segment" id="segment13"><div class="top-fill"></div></div>
 					<div class="segment" id="segment15"><div class="top-fill"></div></div>
 				</div>
 				<div class="letter-container" id="container-n">
-					<div class="segment" id="segment3"><div class="bottom-fill"></div></div>
+					<div class="segment bottom-segment" id="segment3"><div class="bottom-fill"></div></div>
 					<div class="segment" id="segment8"><div class="fill"></div></div>
 					<div class="segment" id="segment9"><div class="fill"></div></div>
 					<div class="segment" id="segment10"><div class="fill"></div></div>
 				</div>
 				<div class="letter-container" id="container-e">
-					<div class="segment" id="segment5"><div class="bottom-fill"></div></div>
+					<div class="segment bottom-segment" id="segment5"><div class="bottom-fill"></div></div>
 					<div class="segment" id="segment11"><div class="fill"></div></div>
 					<div class="top-segment" id="segment12"><div class="top-fill"></div></div>
 					<div class="top-segment" id="segment14"><div class="top-fill"></div></div>
